# fastapi-keycloak-auth

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish.yml  tests.yml
examples/backend/: main.py
examples/svelte/: .env.example  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
examples/svelte/src/: app.css
examples/svelte/src/lib/: auth.ts
examples/svelte/src/routes/: +layout.svelte  +page.svelte
examples/svelte/src/routes/protected/: +page.svelte
src/fastapi_keycloak_auth/: __init__.py  client.py  config.py  dependencies.py  events.py  models.py  router.py
tests/: conftest.py
tests/client/: test_exchange.py  test_openid_config.py  test_userinfo.py  test_verify_token.py
tests/config/: test_properties.py  test_settings.py
tests/dependencies/: test_get_current_user.py  test_optional_user.py  test_require_role.py
tests/events/: test_emitter.py  test_error_handling.py
tests/models/: test_responses.py  test_token_payload.py  test_user.py
tests/router/: conftest.py  test_callback.py  test_login.py  test_logout.py  test_me.py  test_refresh.py  test_status.py
